# disrust

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GPU_INFERENCE.md  IOURING_OPTIMIZATION.md  MERGE_INFERENCE.md  PERFORMANCE.md  README.md  REWORK.md  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
benches/: buffer_pool_bench.rs  common.rs  gpu_inference_bench.rs  pipeline_bench.rs  pipeline_e2e_bench.rs  profile_buffer_pool.rs  request_flow_bench.rs  response_flow_bench.rs
scripts/: generate_verify_model.py  install_onnxruntime.sh
src/: affinity.rs  batch_processor.rs  batch_queue.rs  buffer_pool.rs  clock.rs  config.rs  connection_id.rs  constants.rs  io_thread.rs  lib.rs  main.rs  metrics.rs  protocol.rs  request_flow.rs  response_flow.rs  response_queue.rs  ring_types.rs  timer.rs  verify.rs
src/cuda/: memory.rs  mod.rs  preflight.rs
src/gpu/: batch_queue.rs  completion.rs  diag.rs  mod.rs  preflight.rs  session.rs  submission.rs
src/pipeline/: batch_queue.rs  completion.rs  connection_registry.rs  inference.rs  mod.rs  ready_queue.rs  response_queue.rs  session.rs  submission.rs  writer.rs
src/server/: ingress.rs  mod.rs
tests/: ingress_tcp_integration.rs  pipeline_integration.rs  request_flow_integration.rs  response_flow_integration.rs  submission_completion_integration.rs
tests/common/: mod.rs
tests/models/: ort_sum_model.onnx  ort_verify_model.onnx
