[package]
name = "disrust"
version = "0.1.0"
edition = "2024"
default-run = "disrust"

[lib]
name = "disrust"
path = "src/lib.rs"

[[bin]]
name = "disrust"
path = "src/main.rs"

[[bench]]
name = "buffer_pool_bench"
path = "benches/buffer_pool_bench.rs"
harness = false

[[bench]]
name = "profile_buffer_pool"
path = "benches/profile_buffer_pool.rs"
harness = false

[[bench]]
name = "request_flow_bench"
path = "benches/request_flow_bench.rs"
harness = false

[[bench]]
name = "gpu_inference_bench"
path = "benches/gpu_inference_bench.rs"
harness = false

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
disruptor = "3.7.1"
io-uring = "0.7"
socket2 = { version = "0.5", features = ["all"] }
slab = "0.4"
libc = "0.2"
spsc-bip-buffer = "0.2"
bytemuck = { version = "1", features = ["min_const_generics"] }
hdrhistogram = { version = "7", default-features = false, features = ["sync"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
# Specify the matching CUDA version feature, e.g. features = ["cuda-12040"] or ["cuda-11080"].
# See https://docs.rs/cudarc for available version features.
cudarc = { version = "0.19.3", features = ["cuda-12060"], optional = true }

[features]
default = ["cuda"]
metrics = []
cuda = ["ort/cuda", "dep:cudarc"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
